--- a/public/style.css
+++ b/public/style.css
@@ -1,22 +1,113 @@
-html {
-  height: 800px;
-  width: 360px;
-}
-
-#status-bar {
-  z-index: 1;
-  position: fixed;
+body {
+  background-color: #f8f8f8;
 }
 
 #wrapper {
+  width: 100%;
+  height: 100%;
+  background-color: #f8f8f8;
   display: flex;
+  flex-direction: column;
   align-items: center;
 }
 
-#mockup {
+#phone-wrapper {
   display: flex;
-  position: fixed;
-  height: 800px;
-  width: 360px;
-  z-index: 2;
+  flex-direction: column;
+  align-items: center;
+  max-width: 360px;
+}
+
+.text-bar {
+  box-sizing: border-box;
+  background-color: rgb(255, 255, 255);
+  height: 44px;
+  width: 100%;
+  margin-top: 160px;
+  border-radius: 10px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.nav {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  background-color: #ffffff;
+  width: 100%;
+  height: 40px;
+}
+
+.contents {
+  display: flex;
+  gap: 14px; /* 메뉴 아이템 간격 조정 */
+  margin-right: 24px;
+}
+
+.contents a {
+  text-decoration: black;
+  color: #000;
+  font-weight: bold;
+}
+
+.message-item {
+  display: flex;
+  align-items: center;
+  margin-top: 10px;
+  padding: 10px;
+  width: 90%;
+  background-color: #ffffff;
+  border-radius: 16px;
+}
+
+.message-item img {
+  border-radius: 50%;
+  width: 40px;
+  height: 40px;
+  margin-right: 10px;
+}
+
+.message-content {
+  background-color: #f1f1f1;
+  padding: 10px;
+  border-radius: 10px;
+}
+
+.nickname {
+  font-weight: bold;
+  margin-bottom: 5px;
+}
+
+#chat-wrap {
+  display: flex;
+  flex-direction: column;
+  width: 100%;
+  align-items: center;
+}
+
+#chatArea {
+  display: block; /* 항상 표시 */
+  width: 100%;
+}
+
+#message {
+  list-style-type: none;
+  width: 100%;
+  padding: 0;
+}
+
+#messageInput {
+  width: 70%;
+}
+
+.footer {
+  gap: 0;
+}
+
+input {
+  border: 0;
+  border-radius: 15px;
+  background-color: #f8f8f8;
+  height: 24px;
 }
