--- a/public/profile.css
+++ b/public/profile.css
@@ -49,3 +49,28 @@ body {
   color: #000;
   font-weight: bold;
 }
+
+.message-item p {
+  margin-bottom: 42px;
+}
+
+#pr-name {
+  display: flex;
+  flex-direction: column;
+  text-align: center;
+}
+
+#pr-name h2 {
+  margin: 0;
+  margin-top: 60px;
+  font-size: 32px;
+}
+
+#pr-name p {
+  margin: 0;
+  font-size: 14px;
+}
+
+#profile_image {
+  margin-top: 40px;
+}
